# main_server

./: .env.example  Cargo.toml  Dockerfile  build.rs  docker-compose.yml  dump.rdb
src/: main.rs  utils.rs
src/db/: extra.rs  mod.rs  models.rs
src/gql/: mod.rs  schema.rs
src/gql/mutation/: doctor_mutation.rs  mod.rs  user_mutation.rs
src/gql/query/: doctors_query.rs  mod.rs  test_query.rs  users_query.rs
src/gql/subscription/: mod.rs  user_subscription.rs
src/gql/types/: date.rs  input.rs  mod.rs  simple_broker.rs  uuid.rs
src/routes/: handlers.rs  mod.rs
src/routes/ws/: datatypes.rs  mod.rs
static/: index.html  index.js
