[package]
name = "main_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
axum = "0.5.15"
async-graphql = "4.0.12"
async-graphql-axum = "4.0.12"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
redis = { git = "https://github.com/redis-rs/redis-rs.git", features = ["json", "tokio-comp", "r2d2"] }
chrono = { version = "0.4.22", features = ["serde"] }
rust-argon2 = "1.0.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "serde"] }

[build-dependencies]
dotenv-build = "0.1.1"