[package]
name = "main_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
axum = "0.5.16"
tower-http = { version = "0.3.4", features = ["cors"] }
async-graphql = { version = "4.0.14", features = ["uuid", "chrono"] }
async-graphql-axum = "4.0.14"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
redis = { version = "0.22.1", features = ["json", "tokio-comp", "r2d2"] }
redis-graph = { version = "0.4.3", features = ["tokio-comp"] }
chrono = { version = "0.4.22", features = ["serde"] }
rust-argon2 = "1.0.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "serde"] }
bytes = { version = "1.2.1", features = ["serde"] }

[build-dependencies]
dotenv-build = "0.1.1"
