[package]
name = "main_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.22.0", features = ["full"] }
axum = { version = "0.6.0", features = ["ws"] }
tower-http = { version = "0.3.4", features = ["cors", "fs"] }
async-graphql = { version = "5.0.0", features = ["uuid", "chrono"] }
async-graphql-axum = "5.0.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
redis = { version = "0.22.1", features = ["tokio-comp", "r2d2"] }
redis-graph = { version = "0.4.3", features = ["tokio-comp"] }
chrono = { version = "0.4.22", features = ["serde"] }
rust-argon2 = "1.0.0"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "serde"] }
futures = "0.3.25"
# bytes = { version = "1.2.1", features = ["serde"] }

[build-dependencies]
dotenv-build = "0.1.1"
